After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663390 - theoraenc: fix speed level failure test
theoraenc: fix speed level failure test
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-04 10:35 UTC by Vincent Penquerc'h
Modified: 2011-11-07 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
theoraenc: fix speed level failure test (1000 bytes, patch)
2011-11-04 10:35 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-11-04 10:35:46 UTC
theoraenc: fix speed level failure test
Comment 1 Vincent Penquerc'h 2011-11-04 10:35:48 UTC
Created attachment 200675 [details] [review]
theoraenc: fix speed level failure test

It was testing the opposite of what it thought it was.
Comment 2 Vincent Penquerc'h 2011-11-07 12:29:33 UTC
commit 5d3852d91a08405ec4666243e2ad24844e6de857
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Nov 4 10:34:27 2011 +0000

    theoraenc: fix speed level failure test
    
    It was testing the opposite of what it thought it was.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=663390