theoraenc: fix speed level failure test

It was testing the opposite of what it thought it was.

https://bugzilla.gnome.org/show_bug.cgi?id=663390